Fixed: Series links not opening on iOS

--- a/frontend/src/Series/Details/SeriesDetailsLinks.css
+++ b/frontend/src/Series/Details/SeriesDetailsLinks.css
@@ -11,3 +11,10 @@
 
   cursor: pointer;
 }
+
+@media only screen and (max-width: $breakpointExtraSmall) {
+  .links {
+    display: flex;
+    flex-flow: column wrap;
+  }
+}
